re PR c++/14950 ([non unit-at-a-time] always_inline does not mix with templates and -O0)

PR C++/14950
	* pt.c (instantiate_decl): Clean TI_PENDING_TEMPLATE_FLAG before
	expanding the function.

From-SVN: r83488